envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: game_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/game.v1.GameService"
                            grpc: {}
                          route:
                            cluster: game_server
                            timeout: 0s
                            max_stream_duration:
                              max_stream_duration: 3600s
                        - match:
                            prefix: "/match.v1.MatchService"
                            grpc: {}
                          route:
                            cluster: match_server
                            timeout: 0s
                            max_stream_duration:
                              max_stream_duration: 3600s
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                cors:
                  allow_origin_string_match:
                    - prefix: "*"
                  allow_methods: "GET, POST, OPTIONS"
                  allow_headers: "content-type, x-grpc-web, authorization"
                  expose_headers: "grpc-status, grpc-message"
                  max_age: "1728000"

  clusters:
    - name: game_server
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: game_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: game-server
                      port_value: 50051

    - name: match_server
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: match_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: match-server
                      port_value: 50052

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
